why is download failing?

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,6 +77,7 @@ stages:
 
     - script: 
         cd $(YARN_CACHE_FOLDER)
+        dir
         tar -xf yarn-cache.tar
     
     - task: NodeTool@0
