--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ stages:
 
     - bash: yarn config set registry https://registry.npmjs.org/ --global
 
+    - script: yarn --version
     - script: yarn --frozen-lockfile
       displayName: 'Run yarn'
 
@@ -69,7 +70,8 @@ stages:
         artifactName: 'yarn-$(VM_IMAGE)-tar'
         targetPath: '$(YARN_CACHE_FOLDER)'
 
-    - script: 
+    - script: |
+        echo ON
         dir
         cd ..
         dir 
@@ -84,6 +86,7 @@ stages:
 
     - bash: yarn config set registry https://registry.npmjs.org/ --global
 
+    - script: yarn --version
     - script: yarn --frozen-lockfile
       displayName: 'Run yarn'
 
