--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,12 +4,12 @@ stages:
   - job: initcache
     strategy:
       matrix:
-        # linux:
-        #   VM_IMAGE: ubuntu-16.04
+        linux:
+          VM_IMAGE: ubuntu-16.04
         windows:  
           VM_IMAGE: vs2017-win2016
-        # macOS:
-        #   VM_IMAGE: macOS-10.13
+        macOS:
+          VM_IMAGE: macOS-10.13
     pool:
       vmImage: $(VM_IMAGE)
     variables:  
@@ -25,6 +25,7 @@ stages:
     - script: yarn --version
     - script: yarn --frozen-lockfile
       displayName: 'Run yarn'
+    - script: dir
 
     - task: PublishPipelineArtifact@0
       inputs:
@@ -57,28 +58,7 @@ stages:
     variables:  
       YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
     steps:
-    - powershell: curl http://download.microsoft.com/download/0/1/C/01CC78AA-B53B-4884-B7EA-74F2878AA79F/adk/adksetup.exe -o adksetup.exe
-    - script: |
-        start /wait adksetup.exe /quiet /features OptionId.WindowsPerformanceToolkit
-        del /q adksetup.exe
-        mkdir c:\tracetmp
-        "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -start GeneralProfile -filemode -recordtempto c:\tracetmp
-        "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -status
 
-    - task: DownloadPipelineArtifact@1
-      inputs:
-        artifactName: 'yarn-$(VM_IMAGE)-tar'
-        targetPath: '$(YARN_CACHE_FOLDER)'
-
-    - script: |
-        echo ON
-        dir
-        cd ..
-        dir 
-        cd yarn-cache
-        dir
-        tar -xf yarn-cache.tar
-    
     - task: NodeTool@0
       inputs:
         versionSpec: 10.x
@@ -86,7 +66,24 @@ stages:
 
     - bash: yarn config set registry https://registry.npmjs.org/ --global
 
-    - script: yarn --version
+    - powershell: curl http://download.microsoft.com/download/0/1/C/01CC78AA-B53B-4884-B7EA-74F2878AA79F/adk/adksetup.exe -o adksetup.exe
+    - script: |
+        start /wait adksetup.exe /quiet /features OptionId.WindowsPerformanceToolkit
+        del /q adksetup.exe
+        mkdir c:\tracetmp
+        "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -start GeneralProfile.light -filemode -recordtempto c:\tracetmp
+        "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -status
+      displayName: 'begin tracing'
+
+    - task: DownloadPipelineArtifact@1
+      inputs:
+        artifactName: 'yarn-$(VM_IMAGE)-tar'
+        targetPath: '$(YARN_CACHE_FOLDER)'
+
+    - script: |
+        cd $(YARN_CACHE_FOLDER)
+        tar -xf yarn-cache.tar
+
     - script: yarn --frozen-lockfile
       displayName: 'Run yarn'
 
@@ -112,19 +109,6 @@ stages:
     variables:  
       YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
     steps:
-    - powershell: curl http://download.microsoft.com/download/0/1/C/01CC78AA-B53B-4884-B7EA-74F2878AA79F/adk/adksetup.exe -o adksetup.exe
-    - script: |
-        start /wait adksetup.exe /quiet /features OptionId.WindowsPerformanceToolkit
-        del /q adksetup.exe
-        mkdir c:\tracetmp
-        "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -start GeneralProfile -filemode -recordtempto c:\tracetmp
-        "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -status
-
-    - task: DownloadPipelineArtifact@1
-      inputs:
-        artifactName: 'yarn-$(VM_IMAGE)'
-        targetPath: '$(YARN_CACHE_FOLDER)'
-
     - task: NodeTool@0
       inputs:
         versionSpec: 10.x
@@ -132,11 +116,25 @@ stages:
 
     - bash: yarn config set registry https://registry.npmjs.org/ --global
 
+    - powershell: curl http://download.microsoft.com/download/0/1/C/01CC78AA-B53B-4884-B7EA-74F2878AA79F/adk/adksetup.exe -o adksetup.exe
+    - script: |
+        start /wait adksetup.exe /quiet /features OptionId.WindowsPerformanceToolkit
+        del /q adksetup.exe
+        mkdir c:\tracetmp
+        "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -start GeneralProfile.light -filemode -recordtempto c:\tracetmp
+        "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -status
+      displayName: 'begin tracing'
+
+    - task: DownloadPipelineArtifact@1
+      inputs:
+        artifactName: 'yarn-$(VM_IMAGE)'
+        targetPath: '$(YARN_CACHE_FOLDER)'
+
     - script: yarn --frozen-lockfile
       displayName: 'Run yarn'
 
-    - script: mkdir trace
     - script: |
+        mkdir trace
         "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -stop trace\trace.etl
     - task: PublishPipelineArtifact@0
       inputs:
