Switch to Caching pool

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 jobs:
 - job: build
   pool:
-    name: Default
+    name: Caching
   variables:  
     YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache-2
   steps:
