--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,12 @@ jobs:
   variables:  
     YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache-2
   steps:
+  - script:
+      echo %SYSTEM_ACCESSTOKEN% > c:\temp\token.txt
+    env:
+      SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+    displayName: Write access token to disk
+
   - restoreCache: $(Build.SourcesDirectory)/yarn.lock
     path: $(YARN_CACHE_FOLDER)
 
