--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,17 @@ stages:
         versionSpec: 10.x
       displayName: 'Install Node 10.x'
 
-    ##- bash: yarn config set registry https://registry.npmjs.org/ --global
+    - bash: |
+        export NPM_CACHE_DIR="$(npm config get cache)"
+        echo "##vso[task.setvariable variable=NPM_CACHE_DIR]$NPM_CACHE_DIR"
+
+    - script: npm ci
+
+    - task: PublishPipelineArtifact@0
+      inputs:
+        targetPath: '$(NPM_CACHE_DIR)'
+        artifactName: 'npm-$(Agent.OS)'
+      displayName: Publish npm cache artifact
 
     - script: yarn --frozen-lockfile
       displayName: 'Run yarn'
@@ -51,7 +61,14 @@ stages:
       inputs:
         artifactName: 'yarn-$(Agent.OS)'
         targetPath: '$(YARN_CACHE_FOLDER)'
-    
+      displayName: Download yarn cache
+
+    - task: DownloadPipelineArtifact@1
+      inputs:
+        artifactName: 'npm-$(Agent.OS)'
+        targetPath: .
+      displayName: Download npm cache
+
     - task: NodeTool@0
       inputs:
         versionSpec: 10.x
