--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 stages:
-- stage: init
+- stage: publish
   jobs:
   - job: yarn
     strategy:
@@ -22,15 +22,16 @@ stages:
       displayName: 'Install Node 10.x'
 
     - script: yarn --version
+      displayName: Show yarn version
 
     - bash: yarn cache list | wc -l
       displayName: Show count of packages in yarn cache
 
     - script: yarn --frozen-lockfile
-      displayName: 'Run yarn'
+      displayName: Run yarn
 
     - bash: yarn cache list | wc -l
-      displayName: Show count of packages in yarn cache
+      displayName: Show count of packages in yarn cache (after yarn)
 
     - task: PublishPipelineArtifact@0
       inputs:
@@ -38,12 +39,14 @@ stages:
         artifactName: 'yarn-$(VM_IMAGE)'
       displayName: Publish yarn cache artifact
 
-    - script: tar -cf yarn-cache.tar ../yarn-cache
-    - script: tar -tvf yarn-cache.tar
+    - script: |
+        cd ../yarn-cache
+        tar -cf ../yarn-cache.tar 
+      displayName: Create yarn cache tar
 
     - task: PublishPipelineArtifact@0
       inputs:
-        targetPath: 'yarn-cache.tar'
+        targetPath: '$(Pipeline.Workspace)/yarn-cache.tar'
         artifactName: 'yarn-$(VM_IMAGE)-tar'
       displayName: Publish yarn cache (tar) artifact
 
@@ -83,7 +86,7 @@ stages:
     - script: npm install
       displayName: Run npm install
     
-    - bash: |
+    - script: |
         cd ../npm-cache
         tar -cf ../npm-cache.tar .
       displayName: Create npm cache (tar)
@@ -94,9 +97,9 @@ stages:
         artifactName: 'npm-$(VM_IMAGE)-tar'
       displayName: Publish npm cache (tar) artifact
 
-- stage: test
+- stage: restore
   jobs:
-  - job: testcache
+  - job:
     strategy:
       matrix:
         linux-baseline:
@@ -175,6 +178,7 @@ stages:
 
     - bash: ls -l $(YARN_CACHE_FOLDER) || echo $(YARN_CACHE_FOLDER) not found
       displayName: Display yarn cache folder
+      condition: and(succeeded(), ne(variables['SKIP_YARN'], '1'))
 
     - powershell: curl http://download.microsoft.com/download/0/1/C/01CC78AA-B53B-4884-B7EA-74F2878AA79F/adk/adksetup.exe -o adksetup.exe
       condition: and(succeeded(), eq(variables['VM_IMAGE'], 'vs2017-win2016'))
@@ -190,14 +194,12 @@ stages:
     - task: DownloadPipelineArtifact@1
       inputs:
         artifactName: 'yarn-$(VM_IMAGE)-tar'
-        targetPath: '$(YARN_CACHE_FOLDER)'
+        targetPath: '$(Pipeline.Workspace)'
       condition: and(succeeded(), eq(variables['RESTORE_YARN_CACHE_TAR'], '1'))
-    - script: |
-        cd $(YARN_CACHE_FOLDER)
-        mv yarn-cache.tar ..
-        cd ..
-        mv yarn-cache yarn-cache.old
-        tar -xf yarn-cache.tar
+    - bash: |
+        mkdir -p ../yarn-cache
+        cd ../yarn-cache
+        tar -xf $(Pipeline.Workspace)/yarn-cache.tar
       condition: and(succeeded(), eq(variables['RESTORE_YARN_CACHE_TAR'], '1'))
 
     - task: DownloadPipelineArtifact@1
@@ -243,14 +245,17 @@ stages:
         artifactName: 'npm-$(VM_IMAGE)-tar'
         targetPath: '$(Pipeline.Workspace)'
       condition: and(succeeded(), eq(variables['RESTORE_NPM_CACHE_TAR'], '1'))
+      displayName: Download npm cache tar artifact
     - bash: |
-        mkdir -p $NPM_CONFIG_CACHE
-        cd $NPM_CONFIG_CACHE
-        tar -xf ${PIPELINE_WORKSPACE}/npm-cache.tar      
+        mkdir -p ../npm-cache
+        cd ../npm-cache
+        tar -xf $(Pipeline.Workspace)/npm-cache.tar      
       condition: and(succeeded(), eq(variables['RESTORE_NPM_CACHE_TAR'], '1'))
+      displayName: Extract npm cache tar
            
     - bash: npm install
       condition: and(succeeded(), ne(variables['SKIP_NPM'], '1'))
+      displayName: Run npm install
 
     - script: |
         mkdir trace
