--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,17 @@
 jobs:
 - job: build
+  strategy:
+    matrix:
+      linux:
+        VM_IMAGE: ubuntu-16.04
+      windows:  
+        VM_IMAGE: vs2017-win2016
+      macOS:
+        VM_IMAGE: macOS-10.13
   pool:
-    name: Caching
+    vmImage: $(VM_IMAGE)
   variables:  
-    YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache-2
+    YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
   steps:
   - task: RestoreCache@0
     inputs:
@@ -12,9 +20,6 @@ jobs:
 
   - script: yarn
     displayName: 'Install dependencies'
-
-  - script: yarn build
-    displayName: 'Build and test'
 
   - task: SaveCache@0
     inputs:
