--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ jobs:
       macOS:
         VM_IMAGE: macOS-10.13
   pool:
-    vmImage: $(VM_IMAGE)
+    vmImage: ubuntu-16.04
   variables:  
     YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
   steps:
